# clipboard-as-chat

backend/: .gitignore  pyproject.toml
backend/src/: config.py  database.py  main.py
backend/src/managers/: __init__.py  web_socket_manager.py
backend/src/models/: __init__.py  chat_message.py  chat_session.py
backend/src/routers/: __init__.py  chat_session.py  ws_chat_session.py
backend/src/schemas/: __init__.py  chat_message.py  chat_session.py
backend/src/services/: __init__.py  chat_message.py
backend/src/utils/: __init__.py  chat_session.py
backend/src/validation/: __init__.py  chat_session.py  ws_chat_session.py
cleanup/: run.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/app/: App.tsx  globals.css  index.css  main.tsx
frontend/src/components/: ChatPage.tsx  ChatSessionPage.tsx  CreateSessionPage.tsx  FormField.tsx  Home.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx  sidebar.tsx
frontend/src/features/chat/: ChatActions.tsx  ChatContextProvider.tsx  ChatHeader.tsx  RecentChatSessionsProvider.tsx  index.ts  services.ts  types.ts  utils.ts
frontend/src/features/message/: MessageCard.tsx  Messages.tsx  index.ts  types.ts  useChatMessagesQuery.ts  utils.ts
frontend/src/features/theme/: ToggleThemeButton.tsx  constants.ts  index.ts
frontend/src/hooks/: use-mobile.ts
frontend/src/lib/: types.ts  utils.ts
frontend/src/lib/api/: apiFetch.ts  index.ts  types.ts  utils.ts
frontend/src/pages/: Chat.tsx  Home.tsx  index.ts
frontend/src/pages/Chat/: Chat.tsx  ChatContainer.tsx
(+20 files in other folders)
